--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-VITE_API_BASE_URL=http://127.0.0.1:8233
+VITE_API_BASE_URL=
 VITE_API_MAX_FILE_SIZE=100mb
 VITE_API_VUEFINDER_DIST=../../vuefinder/dist
