--- a/package.json
+++ b/package.json
@@ -10,16 +10,14 @@
   },
   "dependencies": {
     "axios": "^1.2.2",
-    "crypto-js": "^4.1.1",
     "element-plus": "^2.2.28",
-    "mime": "^3.0.0",
-    "spark-md5": "^3.0.2",
-    "uuidjs": "^4.2.12",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "unplugin-auto-import": "^0.16.4",
+    "unplugin-vue-components": "^0.25.0",
     "vite": "^4.0.0"
   }
 }
